Fixed video player on Safari.

--- a/src/components/MessageEditor/MessageEditor.scss
+++ b/src/components/MessageEditor/MessageEditor.scss
@@ -74,6 +74,11 @@ div.messageEditor {
 
             svg {
                 cursor: pointer;
+                margin-left: 24px;
+
+                &:first-child {
+                    margin: 0 !important;
+                }
             }
         }
     }
